--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -223,6 +223,31 @@
                                             </ul>
                                         </li>
                                     }
+
+                                    @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE))
+                                    {
+                                        <li class="@(ViewBag.PrimerNivel == "IT_checklist" ? "active" : null )">
+                                            <a><i class="fa fa-clipboard-list"></i>IT - Checklist <span class="fa fa-chevron-down"></span></a>
+                                            <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "IT_checklist" ? "display:block" : null )">
+                                                <li class="@(ViewBag.SegundoNivel == "IT_site_checklist" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site_checklist")">Site</a></li>
+                                                @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE))
+                                                {
+
+                                                    <li class="link @(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "active" : null )">
+                                                        <a>C&aacute;talogos<span class="fa fa-chevron-down"></span></a>
+                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "display:block" : null )">
+                                                            <h3>Site</h3>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_site" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site")">Sites</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_site_actividades" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site_actividades")">Site - Actividades</a></li>
+                                                        </ul>
+                                                    </li>
+                                                }
+                                            </ul>
+
+                                        </li>
+                                    }
+
+
                                     @if (User.IsInRole(TipoRoles.ADMIN))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "catalogos_admin" ? "active" : null )">
@@ -609,8 +634,8 @@
                                                 {
                                                     <h3>Centros de Costo</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "actual" ? "current-page" : null )"><a href="@Url.Action("Actual", "ResponsableBudget")">ACT FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(-1)))</a></li>
-                                                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
-                                                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
+                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
+                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "centros" ? "current-page" : null )"><a href="@Url.Action("Centros", "ResponsableBudget")">Mis Centros</a></li>
                                                 }
 
