2022-10-18 Se completa checklist de nuevos equipos.

--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -224,24 +224,38 @@
                                         </li>
                                     }
 
-                                    @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE))
+                                    @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE) || User.IsInRole(TipoRoles.IT_CHECKLIST_EQUIPOS))
                                     {
                                         <li class="@(ViewBag.PrimerNivel == "IT_checklist" ? "active" : null )">
                                             <a><i class="fa fa-clipboard-list"></i>IT - Checklist <span class="fa fa-chevron-down"></span></a>
                                             <ul class="nav child_menu" style="@(ViewBag.PrimerNivel == "IT_checklist" ? "display:block" : null )">
-                                                <li class="@(ViewBag.SegundoNivel == "IT_site_checklist" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site_checklist")">Site</a></li>
                                                 @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE))
                                                 {
-
-                                                    <li class="link @(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "active" : null )">
-                                                        <a>C&aacute;talogos<span class="fa fa-chevron-down"></span></a>
-                                                        <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "display:block" : null )">
-                                                            <h3>Site</h3>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_site" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site")">Sites</a></li>
-                                                            <li class="@(ViewBag.TercelNivel == "IT_site_actividades" ? "current-page" : null )"><a href="@Url.Action( "Index", "IT_site_actividades")">Site - Actividades</a></li>
-                                                        </ul>
-                                                    </li>
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_site_checklist" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_site_checklist")">Site</a></li>
                                                 }
+                                                 @if (User.IsInRole(TipoRoles.IT_CHECKLIST_EQUIPOS))
+                                                {
+                                                    <li class="@(ViewBag.SegundoNivel == "IT_equipos_checklist" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_equipos_checklist")">Nuevos Equipos</a></li>
+                                                }
+                                                <li class="link @(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "active" : null )">
+                                                    <a>C&aacute;talogos<span class="fa fa-chevron-down"></span></a>
+                                                    <ul class="nav child_menu" style="@(ViewBag.SegundoNivel == "IT_Checklist_catalogos" ? "display:block" : null )">
+                                                        @if (User.IsInRole(TipoRoles.IT_CHECKLIST_SITE))
+                                                        {
+                                                            <h3>Site</h3>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_site" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_site")">Sites</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_site_actividades" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_site_actividades")">Site - Actividades</a></li>
+                                                        }
+                                                        @if (User.IsInRole(TipoRoles.IT_CHECKLIST_EQUIPOS))
+                                                        {
+                                                            <h3>Nuevos equipos</h3>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_equipos_checklist_categorias" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_equipos_checklist_categorias")">Equipo - Categorias</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_equipos_checklist_actividades" ? "current-page" : null )"><a href="@Url.Action("Index", "IT_equipos_checklist_actividades")">Equipo - Actividades</a></li>
+                                                        }
+                                                    </ul>
+                                                </li>
+
+                                                
                                             </ul>
 
                                         </li>
@@ -634,8 +648,8 @@
                                                 {
                                                     <h3>Centros de Costo</h3>
                                                     @*<li class="@(ViewBag.SegundoNivel == "actual" ? "current-page" : null )"><a href="@Url.Action("Actual", "ResponsableBudget")">ACT FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(-1)))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
-                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
+                                                        <li class="@(ViewBag.SegundoNivel == "forecast" ? "current-page" : null )"><a href="@Url.Action("Forecast", "ResponsableBudget")">FC FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual))</a></li>
+                                                        <li class="@(ViewBag.SegundoNivel == "budget" ? "current-page" : null )"><a href="@Url.Action("Budget", "ResponsableBudget")">BG FY @(Bitacoras.Util.BgPlantillaUtil.DescripcionAnio(fechaActual.AddYears(1)))</a></li>*@
                                                     <li class="@(ViewBag.SegundoNivel == "centros" ? "current-page" : null )"><a href="@Url.Action("Centros", "ResponsableBudget")">Mis Centros</a></li>
                                                 }
 
