--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Details.cshtml
@@ -57,6 +57,12 @@
                             </div>
                         </div>
                         <div class="item form-group">
+                            @Html.LabelFor(model => model.fecha_renovacion_inicio, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                            <div class="col-md-6 col-sm-6 ">
+                                @Html.EditorFor(model => model.fecha_renovacion_inicio, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
+                            </div>
+                        </div>
+                          <div class="item form-group">
                             @Html.LabelFor(model => model.fecha_renovacion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                             <div class="col-md-6 col-sm-6 ">
                                 @Html.EditorFor(model => model.fecha_renovacion, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
