--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_cellular_line/Create.cshtml
@@ -65,7 +65,14 @@
                                     @Html.ValidationMessageFor(model => model.fecha_corte, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                             <div class="item form-group">
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.fecha_renovacion_inicio, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-6 col-sm-6 ">
+                                    @Html.EditorFor(model => model.fecha_renovacion_inicio, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.fecha_renovacion_inicio, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="item form-group">
                                 @Html.LabelFor(model => model.fecha_renovacion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
                                     @Html.EditorFor(model => model.fecha_renovacion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -100,7 +107,7 @@
     <!-- input mask -->
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
-<script>
+    <script>
         $(document).ready(function () {
 
             //inicializa input mask
@@ -115,6 +122,6 @@
         window.onload = function () {
             clicMenu(2);
         }
-</script>
+    </script>
 }
 
